1999-05-10  Mike Grupenhoff <kashmir@munge.com>

	* common-src/fileheader.c, common-src/fileheader.h: rework the
	fileheader parse and format code to remove a lot of duplicated
	code (in the F_DUMPFILE and F_CONT_DUMPFILE cases), consting
	arguments, and simplifying parse code.

1999-05-10  Mike Grupenhoff <kashmir@munge.com>

	* client-src/sendsize.c (getsize_dump): print out the strerror
	if we can't exec killpgrp.

1999-05-10  Mike Grupenhoff <kashmir@munge.com>

	* server-src/dumper.c (add_msg_data): first two arguments
	to memmove() were backwards.

1999-05-07 Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* example/amanda.conf.in: typo

1999-05-07  Mike Grupenhoff <kashmir@munge.com>

	* common-src/alloc.c (safe_env): allow DISPLAY into the
	environment for purify.
	* server-src/holding.c (rename_tmp_holding): if fill_buffer
	returns 0, don't try to parse a nonexistant header.
	* server-src/taper.c (file_reader_side): init datestamp to
	NULL, and don't try to free it if it's still NULL on exit.

1999-05-06  Mike Grupenhoff <kashmir@munge.com>

	* server-src/driver.c (start_some_dumps): sleep_time is an
	offset, not an absolute.  Leave it that way when we return from
	this function.

1999-05-05  Mike Grupenhoff <kashmir@munge.com>

	* server-src/amverify.sh.in (pecho): new function.  Like echo
	but doesn't append newline, and supports \r, etc.  Implemented
	using perl.
	* server-src/amverify.sh.in: use pecho where we used to use echo -n,
	etc.  It's nearly impossible to figure out which echo needs what
	flags and also know if it supports \r.  So we just punt and use
	perl.

1999-05-04  Mike Grupenhoff <kashmir@munge.com>

	* server-src/driver.c: convert to use event handler.
	(some_dumps_in_progress, lookup_dumper): nuke.
	(sleep_time): make a time_t and static.
	(IDLE_NO_DUMPERS): give a lower precedence than IDLE_START_WAIT.
	(start_some_dumps): make this work on one dumper instead of all.
	Call when a dumper is finished and needs more work.